; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_android_ctx.c_android_gfx_ctx_bind_api.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_android_ctx.c_android_gfx_ctx_bind_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@android_api = common dso_local global i32 0, align 4
@g_es3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @android_gfx_ctx_bind_api to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @android_gfx_ctx_bind_api(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* @android_api, align 4
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %15 [
    i32 130, label %12
    i32 129, label %12
    i32 128, label %13
    i32 131, label %14
  ]

12:                                               ; preds = %4, %4
  br label %16

13:                                               ; preds = %4
  br label %16

14:                                               ; preds = %4
  br label %15

15:                                               ; preds = %4, %14
  br label %16

16:                                               ; preds = %15, %13, %12
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
